...
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/BT_RegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register with Email" />


        <TextView
...
            android:layout_height="wrap_content"
            android:text="OR"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/BT_RegisterGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/fui_ic_googleg_color_24dp"
            android:text="Register With Google" />

        <Button
            android:id="@+id/BT_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="I already have an account" />

        <Button
            android:id="@+id/BT_RegisterAnonymous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Continue without an account" />

    </LinearLayout>

...
