...
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/BT_LoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login with Email" />


        <TextView
...
            android:layout_height="wrap_content"
            android:text="OR"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/BT_LoginGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/fui_ic_googleg_color_24dp"
            android:text="Login With Google" />

        <Button
            android:id="@+id/BT_Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="I don't have an account" />

    </LinearLayout>

...
