<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userName_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_mountain_background"
    tools:context="com.epfl.drawyourpath.userProfileCreation.SelectUsernameFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/select_userName_title_userProfileCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/please_enter_a_user_name"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_surface"
            android:textIsSelectable="false"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/select_userName_description_userProfileCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/cardview_shadow_start_color"
            android:justificationMode="inter_word"
            android:padding="4dp"
            android:text="@string/explication_text_username_init"
            android:textColor="@color/design_default_color_surface"
            android:textIsSelectable="false"
            android:textSize="15sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/input_userName_text_UserProfileCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/design_default_color_surface"
            android:hint="@string/user_name"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="40sp" />

        <Button
            android:id="@+id/testUserName_button_userProfileCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/test_availability" />

        <TextView
            android:id="@+id/testUserName_text_userProfileCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="40dp"
            android:textSize="20dp" />


        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/setUserName_button_userProfileCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Validate"
            android:textSize="40sp" />
    </LinearLayout>
</FrameLayout>