...
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/start_profile_creation_button_userProfileCreation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="20dp"
                android:text="@string/start_profile_creation_userProfileCreation"
                android:textSize="15sp" />
...
