<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/personalInfoFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_mountain_background"
    tools:context="com.epfl.drawyourpath.userProfileCreation.PersonalInfoFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
...
